--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,13 +1,8 @@
-img {
+.users img {
   height: 100px;
   width: 100px;
 }
-
-.selectedPage {
-  font-weight: 900;
-  margin: 0 5px;
-}
-
-.pages {
-  height: 20px;
+img {
+  height: 90px;
+  width: 90px;
 }
